notice corner add

--- a/index.html
+++ b/index.html
@@ -113,6 +113,41 @@
             <div class="important-link"></div>
         </section>
         <!-- notice and important link end -->
+        <!-- notice and link corner start -->
+        <section>
+            <div class="notice-link-content">
+              <div class="notice-corner">
+                <div class="recent-notice">
+               <div class="last-notice">
+                <p>সর্বোশেষ নোটিশঃ</p>
+               </div>
+                <marquee class="marquee" behavior="" direction="left"><a href="pdf/mahbub vai.pdf">ছাত্র/ছাত্রীদের প্রশিক্ষণের বিল ।</a></marquee>
+                </div>
+                <div class="notice-bord">
+                    <h1>NOTICE</h1>
+                    <div class="notice">
+                        <p>১. পিকনিক ২০২২ ইং </p>
+                    </div>
+                </div>
+              </div>  
+              <div class="right-side">
+                <div class="important-link">
+                    <h1>Important Link</h1>
+                    <div class="link">
+                       <ol type="1">
+                        <li><a href="https://www.tpi.gov.bd/">টাংগাইল পলিটেকনিক ইন্সস্টিটিউট </a></li>
+                        <li><a href="http://www.bteb.gov.bd/">বাংলাদেশ কারিগরি শিক্ষা বোর্ড</a></li>
+                        <li><a href="https://ictd.gov.bd/">তথ্য ও যোগাযোগ প্রযুক্তি বিভাগ-গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</a></li>
+                         <li><a href="http://www.educationboard.gov.bd/">বাংলাদেশ শিক্ষা বোর্ড </a></li>   
+                        <li><a href="https://www.police.gov.bd/">বাংলাদেশ পুলিশ </a></li>
+                        <li><a href="http://www.dwa.gov.bd/">মহিলা বিষয়ক অধিদপ্তর-গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</a></li>   
+                    </ol> 
+                    </div>
+                </div>
+              </div>
+            </div>
+        </section>
+        <!-- notice and link corner start -->
     </div>
 
     <script src="script.js"></script>
