--- a/index.html
+++ b/index.html
@@ -116,38 +116,72 @@
         <!-- notice and link corner start -->
         <section>
             <div class="notice-link-content">
-              <div class="notice-corner">
-                <div class="recent-notice">
-               <div class="last-notice">
-                <p>সর্বোশেষ নোটিশঃ</p>
-               </div>
-                <marquee class="marquee" behavior="" direction="left"><a href="pdf/mahbub vai.pdf">ছাত্র/ছাত্রীদের প্রশিক্ষণের বিল ।</a></marquee>
-                </div>
-                <div class="notice-bord">
-                    <h1>NOTICE</h1>
-                    <div class="notice">
-                        <p>১. পিকনিক ২০২২ ইং </p>
+                <div class="notice-corner">
+                    <div class="recent-notice">
+                        <div class="last-notice">
+                            <p>সর্বোশেষ নোটিশঃ</p>
+                        </div>
+                        <marquee class="marquee" behavior="" direction="left"><a
+                                href="pdf/mahbub vai.pdf">ছাত্র/ছাত্রীদের প্রশিক্ষণের বিল ।</a></marquee>
+                    </div>
+                    <div class="notice-bord">
+                        <h1>NOTICE</h1>
+                        <div class="notice">
+                            <p>১. পিকনিক ২০২২ ইং </p>
+                        </div>
                     </div>
                 </div>
-              </div>  
-              <div class="right-side">
-                <div class="important-link">
-                    <h1>Important Link</h1>
-                    <div class="link">
-                       <ol type="1">
-                        <li><a href="https://www.tpi.gov.bd/">টাংগাইল পলিটেকনিক ইন্সস্টিটিউট </a></li>
-                        <li><a href="http://www.bteb.gov.bd/">বাংলাদেশ কারিগরি শিক্ষা বোর্ড</a></li>
-                        <li><a href="https://ictd.gov.bd/">তথ্য ও যোগাযোগ প্রযুক্তি বিভাগ-গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</a></li>
-                         <li><a href="http://www.educationboard.gov.bd/">বাংলাদেশ শিক্ষা বোর্ড </a></li>   
-                        <li><a href="https://www.police.gov.bd/">বাংলাদেশ পুলিশ </a></li>
-                        <li><a href="http://www.dwa.gov.bd/">মহিলা বিষয়ক অধিদপ্তর-গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</a></li>   
-                    </ol> 
+                <div class="right-side">
+                    <div class="important-link">
+                        <h1>Important Link</h1>
+                        <div class="link">
+                            <ol type="1">
+                                <li><a href="https://www.tpi.gov.bd/">টাংগাইল পলিটেকনিক ইন্সস্টিটিউট </a></li>
+                                <li><a href="http://www.bteb.gov.bd/">বাংলাদেশ কারিগরি শিক্ষা বোর্ড</a></li>
+                                <li><a href="https://ictd.gov.bd/">তথ্য ও যোগাযোগ প্রযুক্তি বিভাগ-গণপ্রজাতন্ত্রী
+                                        বাংলাদেশ সরকার</a></li>
+                                <li><a href="http://www.educationboard.gov.bd/">বাংলাদেশ শিক্ষা বোর্ড </a></li>
+                                <li><a href="https://www.police.gov.bd/">বাংলাদেশ পুলিশ </a></li>
+                                <li><a href="http://www.dwa.gov.bd/">মহিলা বিষয়ক অধিদপ্তর-গণপ্রজাতন্ত্রী বাংলাদেশ
+                                        সরকার</a></li>
+                            </ol>
+                        </div>
                     </div>
                 </div>
-              </div>
             </div>
         </section>
         <!-- notice and link corner start -->
+        <!-- Contract start -->
+        <section>
+            <div class="contract-corner">
+                <div class="location">
+                    <div class="contract">
+                        <h1>Contract</h1>
+                        <p>Address: B.A.U. Madrasah Deola,Tangail-1900, Bangladesh.</p>
+                        <p>Email: </p>
+                        <p>Phone:</p>
+                    </div>
+                    <div class="social-icon">
+                        <ul>
+                            <li><a href=""><img src="images/facebook-icon.png" alt=""></a></li>
+                            <li><a href=""><img src="images/instagram-icon.png" alt=""></a></li>
+                            <li><a href=""><img src="images/tweeter-icon.png" alt=""></a></li>
+                            <li><a href=""><img src="images/gmail--icon.png" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+                    <div class="map">
+                        <h1>Map</h1>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d58192.5526822347!2d89.92087900000001!3d24.275524!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x908290688169baf7!2sTangail%20Polytechnic%20Institute%2CTangail!5e0!3m2!1sen!2sbd!4v1672766263148!5m2!1sen!2sbd"
+                            width="100%" height="150px" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contract end -->
+        
     </div>
 
     <script src="script.js"></script>
